update fb auth
